refactor: agrupamento por pastas

--- a/style.css
+++ b/style.css
@@ -31,11 +31,14 @@ a:hover {
 }
 
 img {
-    width: 300px;
-    height: 200px;
+    width: 600px;
+    height: 400px;
     object-fit: cover;
     border-radius: 8px;
+    display: block;
+    margin: auto;
 }
+
 
 ul {
     list-style-type: none;
