--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Lato', sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
@@ -38,7 +38,6 @@ img {
     display: block;
     margin: auto;
 }
-
 
 ul {
     list-style-type: none;
