--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ li:hover {
 footer {
     text-align: center;
     padding: 20px;
-    background-color: #333;
+    background-color: rgb(5, 0, 39);
     color: #fff;
 }
 
